[package]
name = "using_lib_from_other_location"
version = "0.1.0"
authors = ["imran82ali <code.imranali@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firstwelcome = {path = "/home/imran82ali/rust/firstwelcome"}

